--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,15 @@ plugins {
     id 'com.android.library' version '7.2.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.7.10' apply false
 }
+allprojects {
+    repositories{
+        google()
+        jcenter()
+        maven { url "https://jitpack.io" }
+    }
+
+}
+
 
 task clean(type: Delete) {
     delete rootProject.buildDir
